--- a/index.njk
+++ b/index.njk
@@ -79,7 +79,9 @@ navtitle: Work
 <p>More posts can be found in <a href="{{ '/posts/' | url }}">the archive</a>.</p> -->
 
 <p>
-Thanks for checking out my art! See more about me <a href="/about">here</a>
+Thanks for checking out my art! See more about me <a href="/about">here</a></p>
+<p class="bolder">
+I'm going to be displaying and selling my art at the West End Celebration in Sand City California on August 26-27 - See you there! <a href="https://westendcelebration.com/">More info here</a>
 </p>
 <div id="gallery">
 <div class="grid">
@@ -87,13 +89,13 @@ Thanks for checking out my art! See more about me <a href="/about">here</a>
     <div>
       <a href="/img/anini_beach.jpg" ><img src="/img/anini_beach.jpg" alt="Anini beach" title="" /></a>
       <br>
-      <p>Anini beach<span style="color:var(--primary-color);"> SOLD</span></p>
+      <p>Anini beach<span style="color:var(--primary-color);"> </span></p>
     </div>
 
     <div>
       <a href="/img/barrel_view.jpg"> <img src="/img/barrel_view.jpg" alt="The view of surfing in the barrel"></a>
       <br>
-      <p>Barrel view<span style="color:var(--primary-color);"> SOLD</span></p>
+      <p>Barrel view<span style="color:var(--primary-color);"> </span></p>
     </div>
 
     <div>
@@ -117,7 +119,7 @@ Thanks for checking out my art! See more about me <a href="/about">here</a>
       <div>
       <a href="/img/tunnels_beach.jpg"> <img src="/img/tunnels_beach.jpg" alt="tunnels_beach"></a>      
       <br>
-      <p>Tunnels beach <span style="color:var(--primary-color);">SOLD</span></p>
+      <p>Tunnels beach <span style="color:var(--primary-color);"></span></p>
     </div>
 
      <div>
@@ -147,13 +149,13 @@ Thanks for checking out my art! See more about me <a href="/about">here</a>
       <div>
         <a href="/img/fullers_3558.jpg"> <img src="/img/fullers_3558.jpg" alt="fullers_3558"></a>      
       <br>
-      <p>Big Sur Surf Spot<span style="color:var(--primary-color);"> SOLD</span></p>
+      <p>Big Sur Surf Spot<span style="color:var(--primary-color);"> </span></p>
     </div>
 
       <div>
         <a href="/img/getchells.jpg"> <img src="/img/getchells.jpg" alt="getchells"></a>      
       <br>
-      <p>Getchells Cove <span style="color:var(--primary-color);"> SOLD</span></p>
+      <p>Getchells Cove <span style="color:var(--primary-color);"> </span></p>
     </div>
 
       <div>
