--- a/index.njk
+++ b/index.njk
@@ -79,7 +79,8 @@ navtitle: Work
 <p>More posts can be found in <a href="{{ '/posts/' | url }}">the archive</a>.</p> -->
 
 <p>
-Thanks for checking out my art! See more about me <a href="/about">here</a></p>
+Thanks for stopping by! Check out my art below and see more items over on <a href="https://www.instagram.com/olearystudios/">Instagram</a>
+ <p><a href="mailto:mattosurf@gmail.com"> Email me </a> if you're interested in buying an original or print. Thanks, Matt! See more about me <a href="/about">here</a></p>
 <p class="bolder">
 I'm going to be displaying and selling my art at the West End Celebration in Sand City California on August 26-27 - See you there! <a href="https://westendcelebration.com/">More info here</a>
 </p>
@@ -237,8 +238,7 @@ $(function(){
   
  </script> 
 
- Some more items can be found on <a href="https://www.instagram.com/olearystudios/">Instagram</a>
- <p><a href="mailto:mattosurf@gmail.com"> Email me</a> for more info, or if you're interested in buying an original or print. Thanks, Matt!
+ 
 
  </br>
  </br>
